<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.dhiva.moviecatalogue.ui.favorite.favmovie.FavMovieFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_rv" />
</FrameLayout>
